making generation of seo params for events and venues

--- a/alpha/event/templates/events/event_detail_page.html
+++ b/alpha/event/templates/events/event_detail_page.html
@@ -11,6 +11,12 @@
 {% load location %}
 {% load gears %}
 
+{% block meta %}
+    <title>{{ event.name }}</title>
+    <meta name="keywords" content="{{ event.tags_as_string }}" />
+    <meta name="description" content="{{ event.short_description }}" />
+{% endblock meta %}
+
 {% block head %}
     <meta property="og:title" content="{{event.name}}" />
     <meta property="og:type" content="website" />
