--- a/alpha/home/templates/pages/terms_of_service.html
+++ b/alpha/home/templates/pages/terms_of_service.html
@@ -1,4 +1,4 @@
-{% extends 'base-with-advertising.html' %}
+{% extends 'pages/base.html' %}
 
 {% block head %}
     <link type="text/css" href="{{STATIC_URL}}styles/static_pages.css" rel="stylesheet" />
