making automatic joining of city name to title and keywords on event details page

--- a/alpha/event/templates/events/event_detail_page.html
+++ b/alpha/event/templates/events/event_detail_page.html
@@ -12,7 +12,7 @@
 {% load gears %}
 
 {% block meta %}
-    <title>{{ event.name }}</title>
+    <title>{{ event.name }} - {{ event.venue.city.name_std }}</title>
     <meta name="keywords" content="{{ event.tags_as_string }}" />
     <meta name="description" content="{{ event.short_description }}" />
 {% endblock meta %}
