--- a/alpha/home/templates/_main_navigation.html
+++ b/alpha/home/templates/_main_navigation.html
@@ -41,6 +41,7 @@
                            class="location"
                            value="{{ user_location.user_location_name }}"
                            data-placeholder="{{ user_location.user_location_name }}"
+                           data-location-id="{{ user_location.user_location_id }}"
                            autocomplete="off"
                            onBlur="onBlur(this)"
                            onFocus="onFocus(this)">
